--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,31 @@
-<router-outlet></router-outlet>
+<div class="background">
+    <div class="backbox">
+        <div class="headerlist">
+            <span style="font-size: 20px; font-weight: 800; letter-spacing: -1px">shophub</span>
+            <span class="headerlist-menu">
+                <span>Home</span>
+                <span>Shop</span>
+                <span>Blog</span>
+                <span>Contact</span>
+            </span>
+            <span style="display: flex; gap: 10px; align-items: center">
+                <span style="font-size: 12px">$300 PILA</span>
+                <span class="cart-circle material-icons center" style="font-size: 16px">shopping_cart</span>
+            </span>
+        </div>
+        <div class="orange-box">
+            <div class="center">
+                <div class="orange-circle">
+                </div>
+            </div>
+
+
+            <router-outlet></router-outlet>
+        </div>
+
+
+
+
+    </div>
+
+</div>
