--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,31 @@
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons&Roboto");
+@import url("https://fonts.googleapis.com/icon?family=Roboto");
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        background-color: #e2e2e2;
+    }
+
+    ::-webkit-scrollbar {
+        width: 5px;
+        height: 5px;
+        background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+        background-color: #343744;
+    }
+}
+
+* {
+    box-sizing: border-box;
+    font-family: Roboto;
+}
