--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,5 +1,5 @@
 <div class="pattern-dot">
-    <div class="card">
+    <div class="card" [routerLink]="'/detail/'+product.url">
         <div class="buttons">
             <i class="material-icons form-icon icon ">fullscreen</i>
             <i class="material-icons form-icon icon ">shopping_cart</i>
