--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
             </span>
             <span style="display: flex; gap: 10px; align-items: center">
                 <span style="font-size: 12px">$300 PILA</span>
-                <span class="cart-circle material-icons center" style="font-size: 16px">shopping_cart</span>
+                <span class="cart-circle material-icons center" style="font-size: 16px" [routerLink]="'/cart'">shopping_cart</span>
             </span>
         </div>
         <div class="orange-box">
