Product Detail / snackbar / cart component

--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,1 +1,34 @@
-<p>cart works!</p>
+<div class="center">
+    <div class="cart">
+        <div class="section">
+            <h1>Meu carrinho</h1>
+            <div class="product-box">
+                <div class="details">
+                    <div class="product-img">
+                        <img src="assets/shoes/Yellow Shoe.png">
+                    </div>
+                    <div class="product-info">
+                        <div>Tênis Nike Revolution 6 Next Nature Feminino</div>
+                        <div>Ref: # 2IC-4364-304-39</div>
+                        <div>Vendido e entregue por Netshoes</div>
+                        <div>Cor: Preto+Grafite</div>
+                        <div>Tamanho: 39</div>
+                    </div>
+                </div>
+                <div class="quantity">
+                    <div class="quantity-box">
+                        <span>Quantidade:</span>
+                        <div class="center"> <i class="material-icons form-icon icon ">remove_circle_outline</i></div>
+                        <input type="number" disabled="true" class="center">
+                        <div class="center"> <i class="material-icons form-icon icon ">add_circle_outline</i></div>
+                    </div>
+                    <div>R$ 219,99</div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="section">
+            <h1>Resumo da compra</h1>
+        </div>
+    </div>
+</div>
