--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="background">
     <div class="backbox">
         <div class="headerlist">
-            <span style="font-size: 20px; font-weight: 800; letter-spacing: -1px">shophub</span>
+            <span style="font-size: 20px; font-weight: 800; letter-spacing: -1px;cursor: pointer;" routerLink="/list">shophub</span>
             <span class="headerlist-menu">
                 <span>Home</span>
                 <span>Shop</span>
@@ -9,7 +9,7 @@
                 <span>Contact</span>
             </span>
             <span style="display: flex; gap: 10px; align-items: center">
-                <span style="font-size: 12px">$300 PILA</span>
+                <span style="font-size: 12px"></span>
                 <span class="cart-circle material-icons center" style="font-size: 16px" [routerLink]="'/cart'">shopping_cart</span>
             </span>
         </div>
