--- a/src/app/pages/cart/cart.component.scss
+++ b/src/app/pages/cart/cart.component.scss
@@ -5,51 +5,126 @@
     max-width: 1040px;
     place-content: center;
     gap: 20px;
+
     .section {
         display: flex;
         flex-direction: column;
+        overflow: auto;
+        height: 600px;
+        margin-right: 10px;
+        padding-right: 10px;
+
         .product-box {
             width: 100%;
-            height: 280px;
             border: 1px solid #e2e2e2;
             border-radius: 5px;
             background: white;
             padding: 20px;
             display: grid;
-            grid-template-rows: 1fr 50px;
+            grid-template-rows: 170px 50px;
             box-shadow: 0px 3px 3px 0px #00000012;
             margin-bottom: 20px;
+
             .details {
                 display: grid;
                 grid-template-columns: 120px 1fr;
+
                 .product-img {
                     img {
                         width: 100%;
                     }
                 }
+
                 .product-info {
                     display: flex;
                     flex-direction: column;
+                    .delete {
+                        display: flex;
+                        justify-content: space-between;
+                        i {
+                            border: 1px solid #e2e2e2;
+                            border-radius: 100%;
+                            padding: 3px;
+                            cursor: pointer;
+                        }
+                    }
                 }
             }
+
             .quantity {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
                 border-top: 1px solid #e2e2e2;
+
                 .quantity-box {
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     gap: 5px;
-                    input {
+
+                    .number-quantity {
+                        border: 1px solid #e2e2e2;
                         width: 25px;
+                        text-align: center;
+                        justify-content: center;
+                        border-radius: 5px;
                     }
+
                     i {
                         cursor: pointer;
                     }
                 }
             }
+        }
+
+        .resumo-box {
+            width: 100%;
+            height: 380px;
+            display: grid;
+            grid-template-rows: repeat(5, 44px);
+            border: 1px solid #ffffff;
+            border-radius: 5px;
+            background: #ffff;
+            padding: 20px;
+            align-items: center;
+            box-shadow: inset 0 0 10px 0px #ffffffde;
+            align-content: space-between;
+
+            .linha-resumo {
+                display: flex;
+                justify-content: space-between;
+                border-bottom: 1px solid #b3b3b3;
+
+                .titulo-resumo {
+                    font-size: 15px;
+                    color: #909090;
+                }
+
+                .valor-resumo {
+                    font-size: 20px;
+                    font-weight: 500;
+                }
+            }
+        }
+
+        .finalizar-button {
+            background: #e7b10b;
+            margin-top: 10px;
+            width: 100%;
+            height: 50px;
+            border-radius: 5px;
+            gap: 10px;
+        }
+
+        .comprar-button {
+            background: transparent;
+            margin-top: 10px;
+            width: 100%;
+            color: #ffa500;
+            height: 50px;
+            border-radius: 5px;
+            border: solid 1px #ffa500;
         }
     }
 }
