--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="background">
     <div class="backbox">
         <div class="headerlist">
-            <span style="font-size: 20px; font-weight: 800; letter-spacing: -1px;cursor: pointer;" routerLink="/list">shophub</span>
+            <span style="font-size: 20px; font-weight: 800; letter-spacing: -1px;cursor: pointer;"
+                routerLink="/list">shophub</span>
             <span class="headerlist-menu">
                 <span>Home</span>
                 <span>Shop</span>
@@ -10,7 +11,8 @@
             </span>
             <span style="display: flex; gap: 10px; align-items: center">
                 <span style="font-size: 12px"></span>
-                <span class="cart-circle material-icons center" style="font-size: 16px" [routerLink]="'/cart'">shopping_cart</span>
+                <span class="cart-circle material-icons center" style="font-size: 25px"
+                    [routerLink]="'/cart'">shopping_cart</span>
             </span>
         </div>
         <div class="orange-box">
@@ -18,14 +20,7 @@
                 <div class="orange-circle">
                 </div>
             </div>
-
-
             <router-outlet></router-outlet>
         </div>
-
-
-
-
     </div>
-
 </div>
