--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,5 +1,16 @@
+<link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<div class="empty-cart center" *ngIf="productList.length == 0">
+    <span class="material-symbols-outlined" style="font-size: 70px">shopping_cart</span>
+    <div class="center" style="gap: 3px">
+        <span style="color: #4e4e4e; font-size: 20px; font-weight: 500; letter-spacing: -0.5px">Seu carrinho está vazio
+        </span>
+        <span class="material-icons" style="font-size: 35px; color: #4e4e4e">sentiment_dissatisfied</span>
+    </div>
+    <button mat-raised-button class="voltar-button" routerLink="/list">Voltar para a página inicial</button>
+</div>
 <div class="center">
-    <div class="cart">
+    <div class="cart" *ngIf="productList.length > 0">
         <div class="section">
             <h1>Meu carrinho</h1>
             <div class="product-box" *ngFor="let product of productList">
@@ -9,12 +20,23 @@
                     </div>
                     <div class="product-info">
                         <div class="delete">
-                            <div class="center">{{product.name}}</div>
+                            <div class="center" style="font-weight: 500">{{product.name}}</div>
                             <i class="material-icons form-icon icon " (click)="removeProduct(product)">delete</i>
                         </div>
-                        <div style="line-height: 32px;">Ref: #{{product.refCod}}</div>
-                        <div style="line-height: 32px;">Cor: {{product.colorDef}}</div>
-                        <div style="line-height: 32px;">Tamanho: 39</div>
+                        <span class="linha-info">
+                            <span style="font-weight: 500;">Ref:</span>
+                            <span style="color: #898989; font-size: 13px">#{{product.refCod}}</span>
+                        </span>
+                        <span class="linha-info">
+                            <span style="font-weight: 500;">Cor:</span>
+                            <span style="color: #898989; font-size: 13px">{{product.colorDef}}</span>
+                        </span>
+                        <span class="linha-info">
+                            <span style="font-weight: 500;">Tamanho:</span>
+                            <span style="color: #898989; font-size: 13px">39</span>
+                        </span>
+                        <mat-checkbox style="font-size: 12px; text-decoration: underline">Para presente?
+                        </mat-checkbox>
                     </div>
                 </div>
                 <div class="quantity">
@@ -24,7 +46,8 @@
                                 (click)="subtract(product)">remove_circle_outline</i></div>
                         <div class="number-quantity">{{product.quantity}}</div>
                         <div class="center"> <i class="material-icons form-icon icon "
-                                (click)="add(product)">add_circle_outline</i></div>
+                                (click)="add(product)">add_circle_outline</i>
+                        </div>
                     </div>
                     <div>{{product.price * product.quantity | currency: 'BRL'}}</div>
                 </div>
@@ -36,23 +59,23 @@
             <div class="resumo-box">
                 <div class="linha-resumo">
                     <span class="titulo-resumo">Subtotal (x itens)</span>
-                    <span class="valor-resumo">R$ 219,99</span>
+                    <span class="valor-resumo">{{subtotal | currency: 'BRL'}}</span>
                 </div>
                 <div class="linha-resumo">
                     <span class="titulo-resumo">Frete</span>
-                    <span class="valor-resumo">R$ 19,99</span>
+                    <span class="valor-resumo">{{frete | currency: 'BRL'}}</span>
                 </div>
                 <div class="linha-resumo">
                     <span class="titulo-resumo">Cupom de desconto</span>
-                    <a href="a">adicionar</a>
+                    <a href="">adicionar</a>
                 </div>
                 <div class="linha-resumo">
                     <span class="titulo-resumo">Total de descontos</span>
-                    <span class="valor-resumo">R$ 0,00</span>
+                    <span class="valor-resumo">{{desconto | currency: 'BRL'}}</span>
                 </div>
                 <div class="linha-resumo">
                     <span class="titulo-resumo">Valor Total</span>
-                    <span class="valor-resumo">R$ 239,98</span>
+                    <span class="valor-resumo">{{total | currency: 'BRL'}}</span>
                 </div>
             </div>
             <div class="resumo-buttons">
