--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -14,7 +14,7 @@
 
 <div class="detail-box">
     <div class="sneaker-details">
-        <div class="sneaker-name">Nike Air Max 270 to Chuck Taylors</div>
+        <div class="sneaker-name">{{product.name}}</div>
         <div class="sneaker-description">Nike's Air Force 1s were among the most popular sneakers this year</div>
         <div class="sneaker-pics">
             <div class="pic-box light-color">
