--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,11 @@
- .background {
-   background: orange;
-   width: 100%;
-   height: 100%;
-   position: absolute;
- }
+.background {
+  background: orange;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
 
- .material-icons {
+.material-icons {
   font-family: "Material Icons";
 }
 
@@ -37,15 +37,13 @@
     }
 
     .cart-circle {
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 40px;
       border-radius: 30px;
       background: #fef3d5;
     }
   }
-
 }
-
 
 .orange-box {
   background: radial-gradient(
@@ -64,11 +62,11 @@
 
   .orange-circle {
     width: 60px;
-    height: 60px;
+    height: 36px;
     background: linear-gradient(90deg, #fe8d19 0%, #feda9d 100%);
-    border-radius: 30px;
+    border-radius: 0px 0 60px 60px;
     position: relative;
-    top: -25px;
+    top: 0px;
     box-shadow: 0px 5px 10px #fe92219c;
   }
 }
@@ -77,4 +75,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.background {
+  background: orange;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
