--- a/src/app/shared/components/product-card/product-card.component.scss
+++ b/src/app/shared/components/product-card/product-card.component.scss
@@ -58,6 +58,6 @@ $dot-space: 15px;
         linear-gradient($bg-color ($dot-space - $dot-size), transparent 1%) center, $dot-color;
     background-size: $dot-space $dot-space;
     width: 100%;
-    height: 100%;
+    height: 431px;
     border-radius: 40px;
 }
