--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -14,7 +14,7 @@
                 {{product.name}}
             </p>
             <p>
-                $236.00
+                {{product.price | currency: 'BRL'}}
             </p>
         </div>
     </div>
